--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
+    <link rel="shortcut icon" type="icon" href="/graphics/icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
   <body>
@@ -47,31 +47,32 @@
       <main>
         <section class="about">
             <div class="container">
-                <div class="aboutpage-wrapper">
-                    <div class="aboutpage-left">
+                <div class="aboutpage_wrapper">
+                    <div class="aboutpage_left">
                         <h2>how it started</h2>
                         <p>
                             <span>I was born and grew up in Romania in a small mountain town called <span class="busteni">Busteni</span>, which literally translates to tree logs. As soon as I finished high-school, I moved to Bucharest, the capital city of Romania, to pursue higher education. This is the place where I found my passion for design.</span>
                             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic in error nihil provident autem placeat recusandae, neque amet officia esse mollitia assumenda sed temporibus. Minima, esse laudantium! Explicabo, enim nulla.
                             Autem, necessitatibus molestias expedita amet iusto tempore officiis et, est nisi architecto accusantium aut quibusdam. Possimus, sapiente quis. Eveniet, vero beatae similique nam facilis vitae? Tempore cumque assumenda itaque temporibus. </span>
                     </div>
-                    <div class="aboutpage-right">
-                        <img src="/graphics/eu2.JPG" alt="picture of myself">
+                    <div class="aboutpage_right">
+                        <img src="/graphics/me-3.jpg" alt="picture of myself" class="profile-pic">
+                        <img src="/graphics/red-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
                     </div>
                 </div>
-                <div class="aboutpage-wrapper">
-                    <div class="aboutpage-left">
+                <div class="aboutpage_wrapper">
+                    <div class="aboutpage_left">
                         <h2>how it's going</h2>
                         <p>
                             <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quod, architecto qui hic debitis doloremque aliquam perferendis cupiditate necessitatibus natus dicta dignissimos voluptatem deserunt, autem ullam veritatis dolorem facilis quisquam.
                             Maxime porro distinctio voluptatum sequi autem nobis eum voluptatem corporis debitis, at atque laboriosam perferendis et esse ex in ullam exercitationem! Obcaecati corrupti incidunt cum porro, necessitatibus labore voluptate aperiam?</span>
                         </p>
                     </div>
-                    <div class="aboutpage-right">
+                    <div class="aboutpage_right">
                     </div>
                 </div>
-                <div class="aboutpage-wrapper">
-                    <div class="aboutpage-left">
+                <div class="aboutpage_wrapper">
+                    <div class="aboutpage_left">
                         <h2>random facts</h2>
                         <p>i like this</p>
                         <p>i like that</p>
@@ -105,6 +106,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
